--- a/Pruebas_en.ini
+++ b/Pruebas_en.ini
@@ -10,7 +10,7 @@ difficulty=0.8
 lengthmin=90
 lengthmax=150
 image=Intro.jpg
-version=70-96-53-1E-30-CB-D0-9D-78-BC-A2-16-D3-8E-1F-3A-0E-82-A0-5C-E0-4E-A6-10-41-B4-00-72-00-1F-BF-A4
+version=20052025
 name.English=Trials of the Silver Twilight
 synopsys.English=After receiving an unpleasant and unexpected "invitation", you wake up in an unfamiliar place. Will you find a way to escape, or will you succumb to madness?
 description.English=After receiving an unpleasant and unexpected "invitation", you wake up in an unfamiliar place. Will you find a way to escape, or will you succumb to madness?
